--- a/index.html
+++ b/index.html
@@ -1,119 +1,251 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather Radar</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>StormTracker13 TrackingNQSevereWeather Real Time Radar</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
-    #map { height: 100vh; }
-    .legend {
+    html, body, #map {
+      height: 100%;
+      margin: 0;
+      font-family: sans-serif;
+    }
+
+    #controls {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 12px 20px;
+      border-radius: 12px;
+      z-index: 999;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    #slider {
+      width: 300px;
+    }
+
+    #playPause {
+      background: #444;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    #timestamp {
+      min-width: 200px;
+    }
+
+    #legend {
       position: absolute;
       top: 10px;
       right: 10px;
-      background-color: white;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-      line-height: 1.5;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 12px;
+      border-radius: 10px;
       z-index: 1000;
+      font-size: 14px;
     }
-    .ai-summary {
+
+    #aiSummary {
       position: absolute;
-      bottom: 10px;
-      right: 10px;
-      background: rgba(255, 255, 255, 0.9);
-      padding: 10px;
-      border-radius: 8px;
-      max-width: 300px;
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      bottom: 20px;
+      right: 20px;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 12px;
+      border-radius: 10px;
       z-index: 1000;
+      width: 250px;
+    }
+
+    .warning-popup {
+      font-family: sans-serif;
+      font-size: 14px;
+    }
+
+    .warning-popup b {
+      display: block;
+      margin: 4px 0;
+    }
+
+    .popup-section {
+      margin-bottom: 6px;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
 
-  <div class="legend">
-    <strong>Legend:</strong><br>
-    <span style="color:red;">■</span> Tornado Warning<br>
-    <span style="color:orange;">■</span> Severe Thunderstorm Warning<br>
-    <span style="color:yellow;">■</span> Flash Flood Warning<br>
+  <div id="legend">
+    <b>Legend:</b><br>
+    🔴 Tornado Warning<br>
+    🟡 Severe Thunderstorm Warning<br>
+    🟢 Flood Warning<br>
+    🟣 Winter Weather<br>
+    🔵 Special Weather Statement
   </div>
 
-  <div class="ai-summary">
-    <strong>AI Weather Summary:</strong>
-    <div id="aiText">Analyzing latest radar and warnings...</div>
+  <div id="aiSummary">
+    <b>AI Weather Summary</b>
+    <div id="aiContent">Loading latest weather data...</div>
   </div>
 
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  <div id="controls">
+    <button id="playPause">▶️ Play</button>
+    <input type="range" id="slider" min="0" max="0" value="0"/>
+    <div id="timestamp">Loading radar...</div>
+  </div>
+
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([37.8, -96], 4);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 18,
+    const map = L.map('map').setView([39.5, -98.35], 5);
+
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+      attribution: '&copy; OpenStreetMap & CartoDB',
+      maxZoom: 18
     }).addTo(map);
 
-    async function fetchAlerts() {
-      const res = await fetch("https://api.weather.gov/alerts/active");
-      const data = await res.json();
+    const slider = document.getElementById('slider');
+    const timestampEl = document.getElementById('timestamp');
+    const playPauseBtn = document.getElementById('playPause');
 
-      data.features.forEach(alert => {
-        const coords = alert.geometry?.coordinates;
-        const props = alert.properties;
+    let radarLayers = [];
+    let frameTimes = [];
+    let currentLayer = null;
+    let playInterval = null;
+    let currentIndex = 0;
 
-        if (coords) {
-          const polygon = L.polygon(coords[0].map(c => [c[1], c[0]]), {
-            color: props.event.includes("Tornado") ? "red" :
-                   props.event.includes("Severe") ? "orange" :
-                   props.event.includes("Flood") ? "yellow" : "gray",
-            weight: 2,
-            fillOpacity: 0.4
+    function loadRadar() {
+      if (currentLayer) {
+        map.removeLayer(currentLayer);
+      }
+      radarLayers = [];
+      frameTimes = [];
+
+      fetch('https://api.rainviewer.com/public/weather-maps.json')
+        .then(res => res.json())
+        .then(data => {
+          const frames = data.radar.past.concat(data.radar.nowcast || []);
+          frames.forEach(frame => {
+            const tileUrl = `https://tilecache.rainviewer.com/v2/radar/${frame.path}/512/{z}/{x}/{y}/2/1_1.png`;
+            const layer = L.tileLayer(tileUrl, { opacity: 0.8 });
+            radarLayers.push(layer);
+            frameTimes.push(new Date(frame.time * 1000));
           });
 
-          const popupHTML = `
-            <div style="font-family: sans-serif; width: 250px;">
-              <div style="background: black; color: white; padding: 6px; font-weight: bold; font-size: 16px;">
-                ${props.event.toUpperCase()}
-              </div>
-              <div style="background: orange; color: black; padding: 6px;">
-                <strong>WHERE:</strong> ${props.areaDesc}
-              </div>
-              <div style="background: #ff9900; color: black; padding: 6px;">
-                <strong>HAZARD:</strong> ${props.description?.match(/(Hail|Wind).*?[\.|\n]/i)?.[0] || "Not specified"}
-              </div>
-              <div style="background: #ff8000; color: black; padding: 6px;">
-                <strong>SOURCE:</strong> ${props.parameter?.source || "Not specified"}
-              </div>
-              <div style="background: #ff6600; color: black; padding: 6px;">
-                <strong>EXPIRES:</strong> ${new Date(props.expires).toLocaleTimeString()}
-              </div>
-            </div>
-          `;
+          slider.max = radarLayers.length - 1;
+          slider.value = radarLayers.length - 1;
+          currentIndex = radarLayers.length - 1;
+          showFrame(currentIndex);
+        });
+    }
 
-          polygon.bindPopup(popupHTML);
-          polygon.addTo(map);
-        }
+    function showFrame(index) {
+      if (currentLayer) {
+        map.removeLayer(currentLayer);
+      }
+      currentLayer = radarLayers[index];
+      currentLayer.addTo(map);
+
+      const time = frameTimes[index];
+      timestampEl.textContent = `Radar time: ${time.toLocaleString()}`;
+      slider.value = index;
+      currentIndex = index;
+    }
+
+    function playRadar() {
+      playInterval = setInterval(() => {
+        currentIndex = (currentIndex + 1) % radarLayers.length;
+        showFrame(currentIndex);
+      }, 600);
+    }
+
+    function pauseRadar() {
+      clearInterval(playInterval);
+      playInterval = null;
+    }
+
+    playPauseBtn.addEventListener('click', () => {
+      if (playInterval) {
+        pauseRadar();
+        playPauseBtn.textContent = "▶️ Play";
+      } else {
+        playRadar();
+        playPauseBtn.textContent = "⏸️ Pause";
+      }
+    });
+
+    slider.addEventListener('input', () => {
+      pauseRadar();
+      playPauseBtn.textContent = "▶️ Play";
+      showFrame(parseInt(slider.value));
+    });
+
+    loadRadar();
+    setInterval(loadRadar, 5 * 60 * 1000);
+
+    // Warnings with styled popups
+    fetch('https://api.weather.gov/alerts/active')
+      .then(response => response.json())
+      .then(data => {
+        data.features.forEach(alert => {
+          const coords = alert.geometry?.coordinates;
+          const props = alert.properties;
+          const eventType = props.event;
+          let color = "orange";
+
+          if (eventType.includes("Tornado")) color = "red";
+          else if (eventType.includes("Severe Thunderstorm")) color = "yellow";
+          else if (eventType.includes("Flood")) color = "green";
+          else if (eventType.includes("Winter")) color = "purple";
+          else if (eventType.includes("Special Weather Statement")) color = "blue";
+
+          if (coords) {
+            const poly = L.polygon(coords[0].map(pair => [pair[1], pair[0]]), {
+              color,
+              fillOpacity: 0.3,
+              weight: 2
+            }).bindPopup(`
+              <div class="warning-popup">
+                <div class="popup-section"><b>${props.event}</b></div>
+                <div class="popup-section"><b>WHERE:</b> ${props.areaDesc}</div>
+                <div class="popup-section"><b>HAZARD:</b> ${props.description?.split('\n')[0] || "N/A"}</div>
+                <div class="popup-section"><b>SOURCE:</b> ${props.messageType || "N/A"}</div>
+                <div class="popup-section"><b>EXPIRES:</b> ${new Date(props.expires).toLocaleString()}</div>
+              </div>
+            `);
+            poly.addTo(map);
+          }
+        });
       });
-    }
 
-    fetchAlerts();
-
-    // Example dynamic summary (can be replaced with AI backend)
-    function updateAISummary() {
+    // AI Weather Summary
+    function generateAISummary() {
       const now = new Date();
-      const summaryText = `Latest scan at ${now.toLocaleTimeString()} shows active warnings across multiple regions. Tornado risk is moderate in central US. Expect gusty winds and possible hail.`;
-      document.getElementById("aiText").textContent = summaryText;
+      const summary = `
+        ${now.toLocaleString()}<br>
+        Monitoring active radar imagery...<br>
+        Severe weather alerts are shown on the map.<br>
+        Use the time slider to view recent radar history.
+      `;
+      document.getElementById('aiContent').innerHTML = summary;
     }
 
-    updateAISummary();
-    setInterval(updateAISummary, 30000); // update every 30s
+    generateAISummary();
+    setInterval(generateAISummary, 60000); // Update every 60 seconds
   </script>
 </body>
 </html>
-
 
 
