--- a/index.html
+++ b/index.html
@@ -1,88 +1,225 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>StormTracker13 TrackingNQSevereWeather Real Time Radar</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
-    #map {
-      height: 100vh;
-      width: 100%;
+    html, body, #map {
+      height: 100%;
+      margin: 0;
+      font-family: sans-serif;
     }
-    .legend {
+
+    #controls {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 12px 20px;
+      border-radius: 12px;
+      z-index: 999;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    #slider {
+      width: 300px;
+    }
+
+    #playPause {
+      background: #444;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    #timestamp {
+      min-width: 200px;
+    }
+
+    #legend {
       position: absolute;
       top: 10px;
       right: 10px;
-      background-color: white;
+      background: rgba(255, 255, 255, 0.9);
       padding: 10px;
-      border-radius: 5px;
-      z-index: 1000;
+      border-radius: 8px;
       font-size: 14px;
+      z-index: 1000;
     }
-    .ai-summary {
+
+    #legend div {
+      margin-bottom: 5px;
+    }
+
+    .color-box {
+      display: inline-block;
+      width: 14px;
+      height: 14px;
+      margin-right: 6px;
+      vertical-align: middle;
+    }
+
+    #aiSummary {
       position: absolute;
-      bottom: 10px;
+      bottom: 100px;
       right: 10px;
-      background-color: #f8f9fa;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      padding: 10px;
-      max-width: 300px;
-      font-size: 14px;
+      width: 250px;
+      background: rgba(0,0,0,0.8);
+      color: white;
+      padding: 12px;
+      border-radius: 10px;
       z-index: 1000;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
+  <div id="map"></div>
 
-<div id="map"></div>
+  <div id="legend">
+    <div><span class="color-box" style="background:red"></span> Tornado Warning</div>
+    <div><span class="color-box" style="background:yellow"></span> Severe Thunderstorm Warning</div>
+    <div><span class="color-box" style="background:green"></span> Flood Warning</div>
+    <div><span class="color-box" style="background:purple"></span> Winter Weather</div>
+    <div><span class="color-box" style="background:blue"></span> Special Weather Statement</div>
+  </div>
 
-<div class="legend">
-  <strong>Legend</strong><br>
-  <span style="color:red;">■</span> Tornado Warning<br>
-  <span style="color:orange;">■</span> Severe Thunderstorm Warning<br>
-  <span style="color:yellow;">■</span> Special Weather Statement<br>
-</div>
+  <div id="aiSummary">
+    <b>AI Weather Summary</b><br/>
+    Conditions are currently calm in most areas.<br/>
+    Watch for updates on severe weather alerts.
+  </div>
 
-<div class="ai-summary" id="ai-summary">
-  <strong>AI Summary:</strong> No active analysis.
-</div>
+  <div id="controls">
+    <button id="playPause">▶️ Play</button>
+    <input type="range" id="slider" min="0" max="0" value="0"/>
+    <div id="timestamp">Loading radar...</div>
+  </div>
 
-<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-<script>
-  const map = L.map('map').setView([-20.1, 146.3], 7); // Center on NQ
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script>
+    const map = L.map('map').setView([39.5, -98.35], 5);
 
-  L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 18,
-  }).addTo(map);
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+      attribution: '&copy; OpenStreetMap & CartoDB',
+      maxZoom: 18
+    }).addTo(map);
 
-  const warnings = [
-    {
-      type: 'Tornado',
-      coords: [[[-20.0, 146.0], [-20.0, 146.2], [-20.2, 146.2], [-20.2, 146.0]]],
-      color: 'red',
-      location: 'Charters Towers',
-      wind: '110 km/h',
-      hail: 'Golf-ball sized',
-      time: 'until 5:45 PM'
-    },
-    {
-      type: 'Severe Thunderstorm',
-      coords: [[[-20.4, 146.4], [-20.4, 146.6], [-20.6, 146.6], [-20.6, 146.4]]],
-      color: 'orange',
-      location: 'Ravenswood',
-      wind: '90 km/h',
-      hail: 'Large hail',
-      time: 'until 6:15 PM'
+    const slider = document.getElementById('slider');
+    const timestampEl = document.getElementById('timestamp');
+    const playPauseBtn = document.getElementById('playPause');
+
+    let radarLayers = [];
+    let frameTimes = [];
+    let currentLayer = null;
+    let playInterval = null;
+    let currentIndex = 0;
+
+    function loadRadar() {
+      if (currentLayer) {
+        map.removeLayer(currentLayer);
+      }
+      radarLayers = [];
+      frameTimes = [];
+
+      fetch('https://api.rainviewer.com/public/weather-maps.json')
+        .then(res => res.json())
+        .then(data => {
+          const frames = data.radar.past.concat(data.radar.nowcast || []);
+          frames.forEach(frame => {
+            const tileUrl = `https://tilecache.rainviewer.com/v2/radar/${frame.path}/512/{z}/{x}/{y}/2/1_1.png`;
+            const layer = L.tileLayer(tileUrl, { opacity: 0.8 });
+            radarLayers.push(layer);
+            frameTimes.push(new Date(frame.time * 1000));
+          });
+
+          slider.max = radarLayers.length - 1;
+          slider.value = radarLayers.length - 1;
+          currentIndex = radarLayers.length - 1;
+          showFrame(currentIndex);
+        });
     }
-  ];
 
-  warnings.forEach(w => {
-    const polygon = L.polygon(w.coords, { color: w.color }).addTo(map);
-    polygon.bindPopup(`${w.type} Warning<br>Location: ${w.location}<br>Wind: ${w.wind}<br>Hail: ${w.hail}<br>Time: ${w.time}`);
-  });
-</script>
+    function showFrame(index) {
+      if (currentLayer) {
+        map.removeLayer(currentLayer);
+      }
+      currentLayer = radarLayers[index];
+      currentLayer.addTo(map);
 
+      const time = frameTimes[index];
+      timestampEl.textContent = `Radar time: ${time.toLocaleString()}`;
+      slider.value = index;
+      currentIndex = index;
+    }
+
+    function playRadar() {
+      playInterval = setInterval(() => {
+        currentIndex = (currentIndex + 1) % radarLayers.length;
+        showFrame(currentIndex);
+      }, 600);
+    }
+
+    function pauseRadar() {
+      clearInterval(playInterval);
+      playInterval = null;
+    }
+
+    playPauseBtn.addEventListener('click', () => {
+      if (playInterval) {
+        pauseRadar();
+        playPauseBtn.textContent = "▶️ Play";
+      } else {
+        playRadar();
+        playPauseBtn.textContent = "⏸️ Pause";
+      }
+    });
+
+    slider.addEventListener('input', () => {
+      pauseRadar();
+      playPauseBtn.textContent = "▶️ Play";
+      showFrame(parseInt(slider.value));
+    });
+
+    loadRadar();
+    setInterval(loadRadar, 5 * 60 * 1000);
+
+    // Alerts
+    fetch('https://api.weather.gov/alerts/active')
+      .then(response => response.json())
+      .then(data => {
+        data.features.forEach(alert => {
+          const coords = alert.geometry?.coordinates;
+          const eventType = alert.properties.event;
+          let color = "orange";
+
+          if (eventType.includes("Tornado")) color = "red";
+          else if (eventType.includes("Severe Thunderstorm")) color = "yellow";
+          else if (eventType.includes("Flood")) color = "green";
+          else if (eventType.includes("Winter")) color = "purple";
+          else if (eventType.includes("Special Weather Statement")) color = "blue";
+
+          if (coords) {
+            const poly = L.polygon(coords[0].map(pair => [pair[1], pair[0]]), {
+              color,
+              fillOpacity: 0.3,
+              weight: 2
+            }).bindPopup(`<b>${alert.properties.event}</b><br>${alert.properties.headline}`);
+            poly.addTo(map);
+          }
+        });
+      });
+  </script>
 </body>
 </html>
+
+
